feat(系统管理): 补充系统管理员用户组权限位&&权限位添加排序
--task=1016517 --user=宋昌昌 用户组优化 https://www.tapd.cn/55049933/s/1593255